# warehouseStihl

./: main.py  pyproject.toml
src/: router.py
src/Api/: API.py  auth.py  categories.py  documents.py  expense_categories.py  expenses.py  goods.py  goods_documents.py  person.py  role.py
src/components/: generate_pdf.py  info_data.py  page.py  paginated_bar.py  sidebar.py
src/components/alert_dialogs/: dialog_expense_categories.py  dialog_expenses.py  dialog_goods.py  dialog_role.py
src/components/bars/: documents_bar.py  expense_categories_bar.py  expenses_bar.py  paginated_bar.py  roles_bar.py
src/pages/: dashboard.py  documents.py  expense_categories.py  expenses.py  goods.py  income.py  login.py  outcome.py  role.py
