[tool.poetry]
name = "warehousestihl"
version = "0.1.0"
description = ""
authors = ["Wolf <badvolf618@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.24.1"
flet-route = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
